--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,17 +1,3 @@
-.movies-body {
-    padding: 20px;
-
-    h3 {
-        font-size: 18px;
-    }
-
-    .picsum-img-wrapper {
-        min-height: 400px;
-        background-size: cover;
-    }
-
-    .movie-pic {
-        height: 200px;
-        width: 100%;
-    }
+* {
+    font-family: 'Poppins', sans-serif !important;
 }
