--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,25 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Roboto", sans-serif; }
+html, body { height: 100%; margin: 0}
+* { 
+    font-family: 'Poppins', sans-serif; 
+}
+
+.home-title {
+    font-size: 24px !important;
+    font-family: 'Poppins', sans-serif !important; 
+    font-weight: 600 !important;
+    letter-spacing: 0.1px;
+}
+
+.movies-body {
+    padding: 40px;
+
+    @media screen and (max-width: 400px) {
+        padding: 25px;
+    }
+
+}
