--- a/src/app/components/new-movies-carousel/new-movies-carousel.component.html
+++ b/src/app/components/new-movies-carousel/new-movies-carousel.component.html
@@ -1,6 +1,6 @@
 <h3 class="home-title" data-aos="fade-right">Películas en Estreno</h3>
 @if (images && !loading && !error) {
-    <ngb-carousel [interval]="1000000000" (slid)="testEvent($event)" data-aos="fade-right">
+    <ngb-carousel [interval]="1500" (slid)="testEvent($event)" data-aos="fade-right" [wrap]="false">
         <ng-template ngbSlide *ngFor="let item of images">
             <div class="picsum-img-wrapper d-flex" [style]="formatSlide(item)" [routerLink]="'/detail/'+item.id" routerLinkActive="active" [state]="{ movie: item, baseURL: baseURL }">
                 <div class="bg-opacity w-100"></div>
